--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   </head>
   <body class="m-0">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="modal-root"></div>
     <div id="root"></div>
   </body>
 </html>
